--- a/Marvel/app/src/main/AndroidManifest.xml
+++ b/Marvel/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="br.com.zup.marvel">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,7 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Marvel">
         <activity
-            android:name=".LoginActivity"
+            android:name=".ui.register.view.RegisterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.login.view.LoginActivity"
             android:exported="false" />
         <activity
             android:name=".ui.splash.view.SplashActivity"
